Include full subject ancestors list instead of only parent subject when querying for information about a subject in REST service.
